fix image and text alignment

--- a/src/sections/Journey/Journey.module.scss
+++ b/src/sections/Journey/Journey.module.scss
@@ -22,40 +22,6 @@
   display:block;
 }
 
-.points {
-  justify-content: space-evenly;
-  list-style-type: none;
-  flex-wrap: wrap;
-  display: flex;
-  gap: 2rem;
-  padding: 0;
-  margin: 0;
-  @include mixins.media(tablet) {
-    flex-direction: column;
-  }
-}
-
-.point{
-  flex-basis: 22rem;
-  svg {
-    max-width: 100%;
-    margin-bottom: -1rem;
-    @include mixins.media(tablet){
-      margin-bottom: 0;
-    }
-
-    @include mixins.media(mobile){
-      margin-bottom: 1rem;
-    }
-
-  }
-  text-align: center;
-
-  @include mixins.media(mobile) {
-    margin-bottom: 3rem;
-  }
-}
-
 .text,
 .heading {
   margin: 0;
@@ -71,4 +37,45 @@
   margin-top: 1rem;
   font-size: 18px;
   line-height: 26px;
+}
+
+.iconContainer {
+  display: grid;
+  //justify-content: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(auto-fill, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 3rem;
+
+  @include mixins.media(mobile) {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(auto-fill, 1fr);
+  }
+}
+
+.iconImage {
+  grid-row: 1;
+
+  @include mixins.media(mobile) {
+    grid-row: auto;
+  }
+
+  svg {
+    width: 100%;
+  }
+}
+
+.iconText {
+  text-align: center;
+  grid-row: 2;
+
+  @include mixins.media(mobile) {
+    grid-row: auto;
+  }
+}
+
+.imageConnectionsAdjustment {
+  @include mixins.media(mobile) {
+    margin: 2.5rem 0;
+  }
 }
